# gridlington-datahub

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-merge.yml  check-links.yml  ci.yml  publish.yml
apis/: main.py
datahub/: __init__.py  __main__.py  data.py  dsr.py  main.py  opal.py  wesim.py
datahub/core/: log_config.py
tests/: __init__.py  conftest.py  opal_dummy_data.py  test_datahub.py  test_dsr.py  test_dsr_api.py  test_dummy.py  test_opal.py  test_opal_api.py  test_wesim.py  test_wesim_api.py
tests/data/: wesim_example.xlsx
