[project]
name = "datahub"
version = "0.1.1"
authors = [
    { name = "Adrian D'Alessandro", email = "a.dalessandro@imperial.ac.uk" },
    { name = "Callum West", email = "c.west@imperial.ac.uk" },
    { name = "Dan Davies", email = "d.w.davies@imperial.ac.uk" },
    { name = "Imperial College London RSE Team", email = "ict-rse-team@imperial.ac.uk" },
]
requires-python = ">=3.10"
dependencies = [
    "pandas[excel]",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "h5py",
    "orjson",
    "pydantic<3.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
    "pip-tools",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-mypy",
    "pytest-mock",
    "pandas-stubs",
    "httpx",
]

[tool.setuptools.packages.find]
exclude = ["htmlcov"]

[tool.mypy]
disallow_any_explicit = true
disallow_any_generics = true
warn_unreachable = true
disallow_untyped_defs = true
exclude = [".venv/"]

[[tool.mypy.overrides]]
module = "datahub.dsr"
disallow_any_generics = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
addopts = "-v --mypy -p no:warnings --cov=datahub --cov-report=html --doctest-modules --ignore=datahub/__main__.py"

[tool.ruff]
select = ["D", "E", "F", "I"] # pydocstyle, pycodestyle, Pyflakes, isort

[tool.ruff.per-file-ignores]
"tests/*" = ["D100", "D104"]

[tool.ruff.pydocstyle]
convention = "google"
